[package]
name = "quick_html2md"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Fast HTML to Markdown conversion with GFM support"
license = "MIT OR Apache-2.0"
keywords = ["html", "markdown", "converter", "gfm"]
categories = ["parser-implementations", "text-processing", "web-programming"]

[features]
default = []
url = ["dep:url"]

[dependencies]
dom_query = "0.24"
url = { version = "2.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
url = "2.5"
