[package]
name = "quick_html2md"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
authors = ["Murrough Foley"]
description = "Fast HTML to Markdown conversion with GFM support"
documentation = "https://docs.rs/quick_html2md"
homepage = "https://murroughfoley.com"
repository = "https://github.com/Murrough-Foley/quick_html2md"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["html", "markdown", "converter", "gfm"]
categories = ["parser-implementations", "text-processing", "web-programming"]

[features]
default = []
url = ["dep:url"]

[dependencies]
dom_query = "0.24"
url = { version = "2.5", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
url = "2.5"
